--- a/test/less/importfile.less
+++ b/test/less/importfile.less
@@ -2,7 +2,7 @@
 // Start of importfile.less
 @import "thirdImportFiles";
 @import "lessfile";
-@import "secondlessfile.less";
+@import "secondlessfile";
 @import "thirdImportFiles";
 // End of importfile.less
 
